src/objects/Stationery__c.object
<CustomObject>
    <fields>
        <fullName>Book_Name__c</fullName>
        <label>Book Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Price__c</fullName>
        <label>Book Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Writer__c</fullName>
        <label>Book Writer</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Stationery</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stationary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stationeries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>